# simple-transcribe

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
simple_transcribe/: main.py
